--- a/SwiftApp/Base.lproj/LaunchScreen.storyboard
+++ b/SwiftApp/Base.lproj/LaunchScreen.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -20,16 +20,16 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg" translatesAutoresizingMaskIntoConstraints="NO" id="mjI-Ci-NvS">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg" translatesAutoresizingMaskIntoConstraints="NO" id="eKP-Pv-hM6">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="mjI-Ci-NvS" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="8iF-eW-69X"/>
-                            <constraint firstAttribute="trailing" secondItem="mjI-Ci-NvS" secondAttribute="trailing" id="rjl-5u-muU"/>
-                            <constraint firstItem="mjI-Ci-NvS" firstAttribute="bottom" secondItem="xb3-aO-Qok" secondAttribute="top" id="ude-IF-Yts"/>
-                            <constraint firstItem="mjI-Ci-NvS" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="vs4-dm-F1A"/>
+                            <constraint firstItem="eKP-Pv-hM6" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="D9O-8j-PHZ"/>
+                            <constraint firstAttribute="trailing" secondItem="eKP-Pv-hM6" secondAttribute="trailing" id="QZl-h7-hGy"/>
+                            <constraint firstItem="eKP-Pv-hM6" firstAttribute="bottom" secondItem="xb3-aO-Qok" secondAttribute="top" id="UK1-8b-EHp"/>
+                            <constraint firstItem="eKP-Pv-hM6" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="UYH-YA-PGa"/>
                         </constraints>
                     </view>
                 </viewController>
